--- a/index.html
+++ b/index.html
@@ -54,12 +54,16 @@
             background: #131314;
             border: 1px solid #3c4043;
             border-radius: 8px;
-            color: #e3e3e3;
-            font-weight: 700;
+            color: #8ab4f8;
+            font-weight: 800;
             text-align: center;
-            font-size: 12px;
-            padding: 4px 0;
+            font-size: 14px;
+            padding: 6px 0;
             width: 100%;
+            outline: none;
+        }
+        .planner-input:focus {
+            border-color: #8ab4f8;
         }
     </style>
 </head>
@@ -69,7 +73,7 @@
     <script type="text/babel">
         const { useState, useEffect, useRef } = React;
 
-        const VERSION = "v1.2.2"; 
+        const VERSION = "v1.2.3"; 
 
         const CONSTANTS = {
             EXERCISE_DB_ID: '2b3fe23d5e3c8011ac26d67c56e8309f',
@@ -122,18 +126,18 @@
                 localStorage.setItem('gym_routines', JSON.stringify(routines));
             }, [routines]);
 
-            // Robust Active Pre-fill Logic
+            // Fix: Explicitly update state when currentExerciseIndex changes in active mode
             useEffect(() => {
                 if (view === 'active' && activeRoutine) {
                     const ex = activeRoutine.exercises[currentExerciseIndex];
+                    if (!ex) return;
+
                     const logs = workoutLog[ex.id] || [];
-                    
                     if (logs.length > 0) {
-                        // If we just finished a set, keep that weight/rep as default for next set
-                        setInputWeight(logs[logs.length-1].w);
-                        setInputReps(logs[logs.length-1].r);
+                        setInputWeight(logs[logs.length - 1].w);
+                        setInputReps(logs[logs.length - 1].r);
                     } else {
-                        // New exercise in session: use values configured in Planner
+                        // Use the weight and reps defined in the PLANNER
                         setInputWeight(ex.suggestedWeight || 0);
                         setInputReps(ex.targetReps || 10);
                     }
@@ -174,7 +178,10 @@
                             const numbers = weightVal.split(/[- ,]/).map(v => parseFloat(v.trim())).filter(n => !isNaN(n));
                             if (numbers.length > 0) baseWeight = Math.min(...numbers);
                         }
-                        const parseNum = (s, f) => { const m = String(s).match(/\d+/); return m ? parseInt(m[0]) : f; };
+                        const parseNum = (s, f) => { 
+                            const m = String(s).match(/\d+/); 
+                            return m ? parseInt(m[0]) : f; 
+                        };
                         return {
                             id: page.id,
                             name: getText(p["Exercise Name"]) || "Untitled",
@@ -256,7 +263,7 @@
 
             if (view === 'settings') return (
                 <div className="min-h-screen bg-[#131314]">
-                    <Header title="Settings" sub="Sync Configuration" />
+                    <Header title="Settings" sub="Configuration" />
                     <main className="p-6 space-y-6">
                         <div className="p-6 rounded-[32px] dark-card space-y-4">
                             <label className="text-[10px] font-bold text-[#9e9e9e] uppercase tracking-widest block ml-1">Internal Secret Key</label>
@@ -272,7 +279,7 @@
 
             if (view === 'home') return (
                 <div className="min-h-screen bg-[#131314]">
-                    <Header title="Gym Tracker" sub="Select Workout" />
+                    <Header title="Gym Tracker" sub="Select Protocol" />
                     <main className="p-6 space-y-4 pb-32">
                         {routines.map(r => (
                             <div key={r.id} className="p-5 rounded-[32px] dark-card flex items-center justify-between shadow-sm active:bg-[#28292c] transition-colors">
@@ -288,9 +295,9 @@
                                 </div>
                             </div>
                         ))}
-                        <button onClick={() => { const nr={id:Date.now(), name:"New Routine", exercises:[]}; setRoutines([...routines, nr]); setActiveRoutine(nr); setView('planner'); }} className="w-full py-10 border-2 border-dashed border-[#3c4043] rounded-[32px] flex flex-col items-center gap-2 text-[#9e9e9e] active:bg-[#1e1f20]">
+                        <button onClick={() => { const nr={id:Date.now(), name:"New Protocol", exercises:[]}; setRoutines([...routines, nr]); setActiveRoutine(nr); setView('planner'); }} className="w-full py-10 border-2 border-dashed border-[#3c4043] rounded-[32px] flex flex-col items-center gap-2 text-[#9e9e9e] active:bg-[#1e1f20]">
                             <Icons.Plus />
-                            <span className="text-[10px] font-bold uppercase tracking-widest">Add Program</span>
+                            <span className="text-[10px] font-bold uppercase tracking-widest">Build Program</span>
                         </button>
                     </main>
                 </div>
@@ -312,7 +319,7 @@
                                 <p className="text-xs text-red-200 font-bold text-center mb-3 tracking-wide">Delete routine permanently?</p>
                                 <div className="flex gap-2">
                                     <button onClick={deleteRoutine} className="flex-1 bg-red-600 text-white py-3 rounded-xl text-[10px] font-bold uppercase">Confirm Delete</button>
-                                    <button onClick={() => setShowConfirmDelete(false)} className="flex-1 bg-[#131314] text-[#9e9e9e] py-3 rounded-xl text-[10px] font-bold uppercase border border-[#3c4043]">Keep it</button>
+                                    <button onClick={() => setShowConfirmDelete(false)} className="flex-1 bg-[#131314] text-[#9e9e9e] py-3 rounded-xl text-[10px] font-bold uppercase border border-[#3c4043]">Cancel</button>
                                 </div>
                             </div>
                         )}
@@ -333,7 +340,7 @@
                             {activeRoutine.exercises.map((ex, i) => (
                                 <div key={ex.id} className="p-4 dark-card rounded-[24px] space-y-4 shadow-sm">
                                     <div className="flex justify-between items-center">
-                                        <span className="font-bold text-[#e3e3e3] text-sm">{ex.name}</span>
+                                        <span className="font-bold text-[#e3e3e3] text-sm leading-tight max-w-[80%]">{ex.name}</span>
                                         <button onClick={() => { const n={...activeRoutine}; n.exercises.splice(i,1); setActiveRoutine(n); }} className="p-2 text-[#3c4043] active:text-red-500"><Icons.Trash /></button>
                                     </div>
                                     <div className="grid grid-cols-4 gap-2">
@@ -359,7 +366,7 @@
                         </div>
                     </main>
                     <footer className="fixed bottom-0 left-0 right-0 p-6 bg-[#131314]/90 backdrop-blur-md border-t border-[#28292c] pb-12 z-50 safe-bottom">
-                        <button onClick={() => { setRoutines(routines.map(r => r.id === activeRoutine.id ? activeRoutine : r)); setView('home'); }} className="w-full py-5 bg-[#8ab4f8] text-[#131314] rounded-[24px] font-bold shadow-xl active:scale-95 transition-all uppercase tracking-widest text-xs italic">Save Protocol</button>
+                        <button onClick={() => { setRoutines(routines.map(r => r.id === activeRoutine.id ? activeRoutine : r)); setView('home'); }} className="w-full py-5 bg-[#8ab4f8] text-[#131314] rounded-[24px] font-bold shadow-xl active:scale-95 transition-all uppercase tracking-widest text-xs italic">Save Changes</button>
                     </footer>
                 </div>
             );
